# GTAV-AutoSplitter

./: .gitignore  Cargo.toml  GTAV-Auto-Splitter.asl  GTAV-Auto-Splitter_dev.asl  LICENSE  LiveSplit.GTAV.sln  README.md
.github/workflows/: build.yml
ASL/: GTAV-Auto-Splitter.asl
LiveSplit.GTAV/: GTAVComponent.cs  GTAVFactory.cs  GTAVMemory.cs  GTAVSettings.cs  GTAVSplits.cs  LiveSplit.GTAV.csproj
LiveSplit.GTAV/Properties/: AssemblyInfo.cs
src/: game.rs  lib.rs  settings.rs
src/data/: collectibles.rs  flags.rs  missions.rs  mod.rs
