[package]
name = "gtav-autosplitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asr = { git = "https://github.com/CryZe/asr", features = ["integer-vars", "derive"] }
bytemuck = "1.12.3"
itertools = "0.10.5"
phf = { version = "0.11", features = ["macros"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
strip = true

[profile.release.build-override]
opt-level = 0
